box send correction Firefox

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -68,12 +68,15 @@
 	}
 	i{
 		color: $color-logo-secondary;
-	  position: relative;
-	  float: left;
-	  top: 28px;
-	  left: 10px;
-	  font-size: 1.1em;
+		position: absolute;
+		float: left;
+		top: 12px;
+		left: 10px;
+		font-size: 1.1em;
 	}
+}
+.form-newsletters{
+	position: relative
 }
 .email-news{
 	display: block;
